# nachlang

./: .gitignore  README.md  TODOS.md  poetry_scripts.py  pyproject.toml  setup.py
docs/: NOTES.md
nachlang/: __init__.py  codegen.py  codegen_old.py  debugger.py  graph.py  lexer.py  nach_types.py  output.gv  parser.py  play.py  playground.py  runtime.py  symbol_table.py  utils.py
nachlang/codegen/: __init__.py  ast.py  core.py  llvm.py
nachlang/examples/: example.nach  fib.nach  print.nach
tests/: conftest.py  test_codegen.py  test_lexer.py  test_parser.py  utils.py
tests/snapshots/: snap_test_codegen.py  snap_test_lexer.py  snap_test_parser.py  snap_test_tokens.py
