[tool.poetry]
name = "nachlang"
version = "0.1.0"
description = "Llvm compiler for nachlang"
authors = ["Ignacio Delmont <ignaciodelmont@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
llvmlite = "0.41.0"
rply = "^0.7.8"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
snapshottest = "^0.6.0"
graphviz = "^0.19.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nachlang = "nachlang:run_app"

[tool.pylint.message_control]
disable = [
	"missing-module-docstring",
	"missing-function-docstring"
	]