[tool.poetry]
name = "nachlang"
version = "0.1.0"
description = "Llvm compiler for nachlang"
authors = ["Ignacio Delmont <ignaciodelmont@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llvmlite = "0.44.0"
rply = "^0.7.8"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
isort = "^6.0.1"
pytest = "^8.4.1"
black = "^25.1.0"
graphviz = "^0.21"
snapshottest = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nachlang = "nachlang:run_app"
format = "poetry_scripts:format_code"

[tool.pylint.message_control]
disable = [
	"missing-module-docstring",
	"missing-function-docstring"
	]